--- a/public/Styles/app.css
+++ b/public/Styles/app.css
@@ -1,32 +1,35 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-image: linear-gradient(to left top, #bebafa, #c0a8f027, #f5b6d5, #f3b0f3, #cdb6f5, #c3a4f7, #dfbaf7, #ffd8ff);
+    font-family: 'Dosis', sans-serif;
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;
     animation: moveGradient 1s alternate infinite;
+    background-color: ivory;
 }
 
 header {
     display: flex;
+    z-index: 10;
     justify-content: center;
-    position: relative;
+    position: fixed;
     width: 100%;
     background-color: white;
-    opacity: 0.7;
+    opacity: 0.95;
     box-shadow: 3px 4px 3px darkgrey;
     height: 60px;   
+    background: #5f86f2;
 }
 
 #trade-mark {
     padding: 0%;
     margin: 0%;
     position: absolute;
+    color: white;
     top: 7%;
     left: 2%;
-    text-shadow: 2px 2px 2px #aaa;
+    text-shadow: 3px 4px 5px #aaa;
     font-weight: 600;
     font-family: 'Tangerine', serif;
     font-size: 48px;  
@@ -39,15 +42,15 @@ header {
     margin-top: 0;
     padding-top: 0;
     display: flex;
-    justify-content: center;
     list-style-type: none;
 }
 
-#navs ul  {   
+#navs ul  {
+    color: white;   
     width: 100px;
     margin-top: 0%;
     padding: 1% 5% 2% 5%;
-    font-size: 20px;
+    font-size: 22px;
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
     user-select: none;   
@@ -80,10 +83,87 @@ header {
 }
   
 
+#blog-cards {
+    margin: auto;
+    width: 1500px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: white;
+    z-index: -1;
+}
+
+.cards {
+    margin: 3%;
+    width: 375px;
+    height: 450px;
+    background-color: white;
+    overflow: hidden;
+    cursor: pointer; 
+    box-shadow: 5px 3px 15px rgb(58, 57, 57);    
+}
+
+.cards img {
+    width: 100%;
+    height: 70%;
+}
+
+.background {
+    height: 30%;
+    position: relative;
+    overflow: hidden;
+}
+
+.background p {
+    position: absolute;
+    top: 50%;
+    left: 7%;
+    color: white;
+    font-size: 50px;
+    text-shadow: 10px 7px 7px rgb(138, 136, 136);
+}
+
+.cards h2{ 
+    padding-left: 4%;
+    margin: 0%;
+    color: rgb(102, 101, 101)
+}
+
+.cards .author  {
+    float: right;
+    margin: 0%;
+    padding-top: 10%;
+    padding-right: 3%;
+    color: #aaa
+}
+
+
+footer {
+    display: grid;
+    background: #5f86f2b4;
+    height: 100px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
 
 }
-
